created api request and geted list of users

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <header>
+        <div class="headerTitle">
+            <h2>Friendly friends</h2>
+        </div>
+    </header>
+
+    <section>
+        <div class="userList">
+
+        </div>
+    </section>
+
+    <script src="index.js"></script>
+    <script src="user_posts.js"></script>
 </body>
 </html>
